--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
 <section class="header">
     <nav>
-        <a href="index.html"><img src="img/205.png" width="100px" alt="logo"></a>
+        <a href="index.html"><img src="/img/205.png" width="100px" alt="logo"></a>
         <div class="nav-links" id="navLinks">
             <i class="fa fa-times" onclick="hideMenu()" ></i>
 
